No more dynamic context menu :(

--- a/options/options.html
+++ b/options/options.html
@@ -26,6 +26,7 @@
 	.conf td textarea {
 		margin: 0;
 		border: none;
+		width: 100%;
 	}
 
 	.controls {
@@ -45,7 +46,6 @@
 	<table class="conf">
 		<thead>
 			<tr>
-				<th> Context menu </th>
 				<th> Matching regex </th>
 				<th> Generated URL </th>
 			</tr>
@@ -64,7 +64,7 @@
 	</div>
 
 	<div class="controls" > 
-  		<button id="save">Save</button>
+  	<button id="save">Save</button>
 		<div id="status" ></div>
 	</div>
 
